# clemente-client

./: README.md  main.py
GUI-Anjuta/: .anjuta_sym_db.db  Makefile.am  configure.ac
GUI-Anjuta/.anjuta/session/: anjuta.session  dock-layout.xml
GUI-Anjuta/src/: Makefile.am  clemente_client.py  clemente_client.ui  config_client.ui
Stable/: clemente_client.py  cliente.py  interface.py  main.py
Stable/ui/: config_client.ui
trying/: interf_pygtk.glade  pygtk_hola.py
